# neuroscript-rs

./: .gitattributes  .gitignore  .mcp.json  .snapshotignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEGEN.md  CONTRIBUTING.md  Cargo.toml  FIRST_ORDER_NEURONS_REFACTORING.md  GPT2Small-v2.py  ISSUES.md  LICENSE  NEUROSCRIPT_V2_PLAN.md  PACKAGE_MANAGEMENT.md  PARSER_COMPARISON.md  README.md  RECURSION_RESEARCH.md  REFACTORING-PHASE1-COMPLETE.md  RESOLVED-parameter-naming-bug.md  STEP_1_COMPLETE.md  TRAINING_GUIDE.md  TRM_RUST_AUTOCOMPLETE.md  TRM_SUMMARY.md  V2_README.md  V2_SUMMARY.md  build.rs  generation_progress.md  gpt2.ns  gpt2_small.py  mvp-todo.md  neuron-candidates.md  neuroscript.spec.md  opencode-task.md  package-lock.json  package.json  pyproject.toml  residual.py  setup.py  (+9 more)
.agent/rules/: always-commit.md
.claude/: conventions.md  settings.json
.claude/agents/: CLAUDE.ava.md  CLAUDE.roy.md  CLAUDE.vision.md  axon.md  backlog-worker.md  backlog-worker.md.retired  dev.md  docs.md  implementer.md  planner.md
.github/: FUNDING.yml
.github/workflows/: _build-and-test.yml  _wasm-check.yml  ci.yml  claude-code-review.yml  claude.yml  draft-pr-guard.yml  test-runner.yml
__scratch/: residual.py
docs/: AGENT-SCOREBOARD.md  PROGRESS.md  language-spec.md  pest-grammar-review.md
docs/language/: shapes.md
docs/plans/: 2026-02-26-fat-arrow-shape-transforms.md  2026-03-03-hyper-connections-and-wrap.md  2026-03-07-github-issues-workflow-design.md  2026-03-07-knowledge-capture-design.md  2026-03-08-sprint-4-design.md  2026-03-08-sprint-4-plan.md
docs/reviews/: 2026-03-05-codebase-review.md  2026-03-06-codebase-review.md  fix-queue.json  pr-comment-audit-2026-03-05.md
editors/vscode/: language-configuration.json  package.json
examples/: 01-comments.ns  02-imports.ns  02-palindrome.ns  03-parameters.ns  04-shapes.ns  05-ports.ns  06-impl-refs.ns  07-pipelines.ns  08-tuples.ns  09-port-access.ns  10-match.ns  11-calls.ns  12-expressions.ns  13-values.ns  14-composite.ns  15-edge-cases.ns  16-recursion.ns  17-trm.ns  18-context-scopes.ns  18-sequential.ns  20-match-optimizations.ns  21-reorder-demo.ns  22-xor.ns  24-trm.ns  27-addition.ns  28-context_basic.ns  28-let_set_basic.ns  30-first-order-phase1.ns  CLAUDE.md  DilatedConv.ns  DilatedConv_README.md  README.md  adversarial_identifiers.ns  bias_demo.ns  cnn_demo.ns  cnn_demo_2.ns  codegen_demo.ns  comprehensive.ns  demo_mhc.py  doc_comment_blank_line.ns  (+44 more)
examples/codegen_demo/: match_dimension_binding.ns  residual.ns
examples/data/: addition_train.jsonl  xor_train.jsonl
examples/primitives/: CLAUDE.md  activations.ns  attention.ns  basics.ns  convolutions.ns  embeddings.ns  normalization.ns  operations.ns  pooling.ns  regularization.ns  structural.ns
examples/real_world/: cnn_demo_2.ns  gpt2_small.ns  llama_rope.ns  resnet.ns  vision_transformer.ns  wasteland_briefing_v1.ns  wasteland_briefing_v2.ns  wasteland_briefing_v3_mhc.ns  wasteland_coder_v1.ns  wasteland_hybrid_v1.ns  wasteland_moe_v1.ns
examples/stdlib/: attention.ns  feedforward.ns  residual.ns  transformer_block.ns  transformer_stack.ns
examples/tutorials/: 01_shape_inference.ns  02_fork_join.ns  03_match_guards.ns  04_einops_and_einsum.ns
neuroscript_runtime/: README.md  __init__.py  cli.py  contracts.py  defaults.py  runner.py  runner_v2.py
neuroscript_runtime/primitives/: CLAUDE.md  __init__.py  activations.py  arithmetic.py  attention.py  connections.py  convolutions.py  diffusion.py  embeddings.py  linear.py  logging.py  matrix.py  neural_block.py  normalization.py  operations.py  pooling.py  regularization.py  routing.py  ssm.py  structural.py  test_neural_block.py  test_new_primitives.py  test_primitives.py
notes/: SHAPE_ALGEBRA_TESTS.md  STDLIB_STATUS.md  dead-branch-elim.md  dim_projection.md  language-gaps.md  neuron-candidates.md  neuroscript_context_scope_spec.md  neuroscript_let_set_spec.md  parser-param-naming-bug.md  shape_algebra.md  shape_inference_realization.md  shape_inference_summary.md  trm.md
scripts/: analyze-pr-comments.sh  build-fix-context.sh  fix-agent-settings.json  fix-queue.sh  generate-docs.sh  wait-for-review.sh  watch-review.sh
scripts/hooks/: blocklist_check.sh  (+5 more)
src/: CLAUDE.md  codegen.rs  codegen_guide.md  contract_resolver.rs  desugar.rs  doc_parser.rs  interfaces.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  shape_algebra.rs  shape_inference.rs  stdlib.rs  stdlib_registry.rs  unroll.rs  validator.rs  visitor.rs  wasm.rs
stdlib/: BottleneckBlock.ns  Conformer.ns  ConvNeXtBlock.ns  CrossAttention.ns  DenoisingHead.ns  DenseBlock.ns  DenseConnection.ns  Expert.ns  FFN.ns  FusedMBConv.ns  GLU.ns  GatedFFN.ns  GeGLU.ns  GroupedQueryAttention.ns  HighwayConnection.ns  HyperConnect.ns  InceptionBlock.ns  LearnableResidual.ns  MBConvBlock.ns  MambaBlock.ns  ManifoldHyperConnect.ns  MetaNeurons.ns  MoERouter.ns  MultiHeadAttention.ns  MultiHeadLatentAttention.ns  MultiQueryAttention.ns  MultiTokenPredictionHead.ns  PatchEmbedding.ns  PostNormResidual.ns  PreNormResidual.ns  README.md  RelativePositionBias.ns  ResNeXtBlock.ns  ResNetBasicBlock.ns  Residual.ns  SEBlock.ns  SigmoidMoERouter.ns  SwiGLU.ns  TransformerBlock.ns  TransformerDecoderBlock.ns  (+6 more)
tests/: README.md  acceptance_116.rs  acceptance_120.rs  acceptance_tests.rs  cli_tests.rs  integration_tests.rs  param_naming_regression.ns  test_conformer.py  test_fused_mb_conv.py  test_inception_block.py  test_swi_glu.py  test_wave_net_block.py
tools/: CLAUDE.md  neuron-genealogy.html
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+540 files in other folders)
